web3-wallet-backend/kubernetes/manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web3-wallet
  labels:
    name: web3-wallet
